[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UI/PauseUI.gd" type="Script" id=1]
[ext_resource path="res://sprites/UI/quitbutton.png" type="Texture" id=2]
[ext_resource path="res://sprites/UI/quitbutton_pressed.png" type="Texture" id=3]
[ext_resource path="res://sprites/UI/HeartFull.png" type="Texture" id=4]
[ext_resource path="res://sprites/UI/quitbutton_hover.png" type="Texture" id=5]
[ext_resource path="res://sprites/UI/PauseIcon.png" type="Texture" id=7]
[ext_resource path="res://sprites/UI/settingsbutton.png" type="Texture" id=8]
[ext_resource path="res://sprites/UI/settingsbutton_hover.png" type="Texture" id=9]
[ext_resource path="res://sprites/UI/settingsbutton_pressed.png" type="Texture" id=10]

[node name="PauseUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = -48.0
script = ExtResource( 1 )

[node name="PauseIcon" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_right = -4.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 16, 0 )
texture = ExtResource( 7 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
margin_right = 464.0
margin_bottom = 205.0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_right = 128.0
margin_bottom = 205.0

[node name="QuestItems" type="ScrollContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 137.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/QuestItems"]

[node name="InventoryDisplay" type="ItemList" parent="Margin/HBoxContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 128.0
margin_bottom = 205.0
rect_min_size = Vector2( 128, 64 )
max_columns = 4

[node name="VBox" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_left = 132.0
margin_right = 464.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PassivesSplit" type="HBoxContainer" parent="Margin/HBoxContainer/VBox"]
margin_right = 332.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="Margin/HBoxContainer/VBox/PassivesSplit"]
margin_right = 48.0
margin_bottom = 100.0
icon = ExtResource( 4 )

[node name="QuestSplit" type="HBoxContainer" parent="Margin/HBoxContainer/VBox"]
margin_top = 104.0
margin_right = 332.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="Margin/HBoxContainer/VBox/QuestSplit"]
margin_right = 48.0
margin_bottom = 101.0
icon = ExtResource( 4 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 220.0
margin_top = 105.0
margin_right = 420.0
margin_bottom = 190.0
window_title = "Quit Run"
dialog_text = "Really Quit the Run?
Your Progress will be lost!"

[node name="SettingsButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -116.0
margin_top = -68.0
margin_right = -68.0
margin_bottom = -20.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )

[node name="QuitButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -68.0
margin_right = -20.0
margin_bottom = -20.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
